k8s/apigateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocelot-api-gateway
  namespace: api-gateway-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ocelot-api-gateway
  template:
    metadata:
      labels:
        app: ocelot-api-gateway
    spec:
      containers:
      - name: ocelot-api-gateway
        image: huseyintoremen/ocelotapigateway:latest
        ports:
        - containerPort: 80
        - containerPort: 443
    volumeMounts:
      - name: certs
        mountPath: "/app/secrets"
        readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  name: ocelot-api-gateway
  namespace: api-gateway-namespace
spec:
  ports:
  - name: http-port
    port: 80
    targetPort: 80
  - name: https-port
    port: 443
    targetPort: 443
  selector:
    app: ocelot-api-gateway
