k8s/authservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: api-gateway-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: huseyintoremen/authservice:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: api-gateway-namespace
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: auth-service
