k8s/identityservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-service
  namespace: api-gateway-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-service
  template:
    metadata:
      labels:
        app: identity-service
    spec:
      containers:
      - name: identity-service
        image: huseyintoremen/identityservice:latest
        ports:
        - containerPort: 80
        - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: identity-service
  namespace: api-gateway-namespace
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: identity-service
