k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  namespace: api-gateway-namespace
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"    
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - apigateway.local
    secretName: my-tls-secret
  rules:
    - host: apigateway.local
      http:
        paths:
          - path: /healthz
            pathType: Prefix
            backend:
              service:
                name: ocelot-api-gateway
                port:
                  number: 80
          - path: /identity/healthz
            pathType: Prefix
            backend:
              service:
                name: identity-service
                port:
                  number: 80
          - path: /auth/healthz
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
